feat: correcion de errores de depa